## 5.4.1

- New: Japanese translation
- Improved: toggle logic for launcher text color
- Improved: refreshed toggle switch style in settings
- Improved: changelog style and help text appearance

Please consider translating this app into your language at Transifex.

## 5.4.0

- New: wallpaper with Android 12 setup design of Pixel 6
- New: yellow and turquoise app color themes
- New: Czech and Lithuanian translations
- New: privacy policy link in about section
- Improved: new help dialog accessible from top right menus and overview screen
- Improved: simplified night mode option in appearance settings
- Improved: app layout and dialog appearance on large screens
- Improved: workaround for MIUI issue replaced by info in help dialog, since workaround didn't work
- Improved: app color theme selection
- Fixed: potential solution for blank settings pages

## 5.3.0

- New: another autumnal Pixel 6 Material You wallpaper!
- New: additional Dracula theme color variants in the Pixel 4 Doodle collection
- New: battery saver options for page swipe animation, tilt and zoom effects
- New: Finnish translation
- Improved: separate reset button for shape scale to recalculate optimal scale based on display metrics
- Improved: splash screen background color on Android 12
- Fixed: dark status bar icons on dark wallpapers on some devices (finally, thanks Vivek!)
- Fixed: random wallpaper not refreshing when lockscreen zoom was turned off

## 5.2.0

- New: default shape scale based on display size and density (reset all options to let Doodle calculate the default shape scale)
- New: FAQ in info section (tap info card on start page)
- New: black (AMOLED) app theme (only with one static accent color due to internal reasons)
- Improved: wallpaper design selection thumbnails and overview page appearance
- Improved: method to determine if wallpaper is currently applied
- Improved: tilt effect options hidden if device has no acceleration sensor