@@ -27,6 +27,9 @@
     android:name="android.software.live_wallpaper"
     android:required="true" />
 
+  <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.SET_WALLPAPER" />
+
   <queries>
     <intent>
       <action android:name="android.intent.action.MAIN" />
