@@ -49,12 +49,56 @@
       android:layout_height="wrap_content">
 
       <LinearLayout
+        android:id="@+id/linear_appearance_container_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
+        android:orientation="vertical"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_max="@dimen/max_content_width"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.card.MaterialCardView
+          android:id="@+id/card_appearance_one_ui"
+          style="@style/Widget.Doodle.Card.Text"
+          android:layout_marginTop="16dp"
+          app:cardBackgroundColor="?attr/colorErrorContainer"
+          app:contentPaddingBottom="8dp">
+
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.Paragraph"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="4dp"
+              android:textColor="?attr/colorOnErrorContainer"
+              android:text="@string/appearance_one_ui" />
+
+            <com.google.android.material.button.MaterialButton
+              android:id="@+id/button_appearance_set_static"
+              style="@style/Widget.Doodle.Button.TextButton"
+              android:textColor="?attr/colorOnErrorContainer"
+              android:layout_gravity="center_horizontal"
+              android:text="@string/action_set_static" />
+
+          </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:paddingBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linear_appearance_container_card"
         app:layout_constraintWidth_max="@dimen/max_content_width"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
