@@ -52,7 +52,6 @@
         android:id="@+id/linear_parallax_container_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
         android:orientation="vertical"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -64,7 +63,7 @@
         <com.google.android.material.card.MaterialCardView
           android:id="@+id/card_parallax_touch_wiz"
           style="@style/Widget.Doodle.Card.Text"
-          android:layout_marginTop="8dp"
+          android:layout_marginTop="16dp"
           app:cardBackgroundColor="?attr/colorErrorContainer">
 
           <TextView
