@@ -1,11 +1,13 @@
 ## 5.4.1
 
+- New: workaround for Samsung's unfavorable implementation of dynamic colors on Android 12+ (appearance section)
 - New: Japanese translation
 - Improved: toggle logic for launcher text color
 - Improved: refreshed toggle switch style in settings
 - Improved: changelog style and help text appearance
+- Improved: changed method for haptic effects in settings app
 
-Please consider translating this app into your language at Transifex.
+? Please consider translating this app into your language at Transifex.
 
 ## 5.4.0
 
